--- a/index.html
+++ b/index.html
@@ -15,33 +15,56 @@
     <header>
         <nav>
             <a class="nav" href="bootstrap.html">Bootstrap|</a>
-            <a class="nav1" href="index.html">Css|</a>
-            <a class="nav2" href="index.html">Home|</a>
+            <a class="nav1" href="index.html">Css |</a>
+            <a class="nav2" href="index.html">| Home |</a>
         </nav>
 
-        <h1 class="title-movie">Favorite Terror Movie</h1>
+        <h1 class="movie-title"><strong> Favorite Terror Movie</strong></h1>
 
     </header>
 
+
+
+    <!--This is my image and text info about the movie. Inside the body code-->
     <main>
+        <h3>Released date: October 14, 2007 (Screamfest) September 25, 2009 (United States)
+        </h3>
 
         <img class="image" src="images/paranormal activity.jpeg" alt="My favorite movie image">
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aperiam ipsa culpa libero, repudiandae
-            quas labore recusandae cupiditate, temporibus fugit numquam reiciendis. Numquam, omnis explicabo? Iure
-            doloremque incidunt facilis quis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus cumque
-            aspernatur omnis autem ex illum voluptates pariatur, suscipit exercitationem harum rerum quaerat, veritatis
-            vitae. Aut accusantium rem architecto eligendi quo. Lorem ipsum dolor sit, amet consectetur adipisicing
-            elit. Qui sunt laudantium quasi magnam soluta perferendis. Cupiditate minima minus perferendis temporibus,
-            maiores animi fuga qui ullam laborum corporis suscipit dolor consectetur?</p>
+        <p class="info"> <strong>
+            Paranormal Activity is a 2007 American supernatural horror film produced, written, directed, photographed
+            and edited by Oren Peli. It centers on a young couple (Katie Featherston and Micah Sloat) who are haunted by
+            a supernatural presence in their home. They then set up a camera to document what is haunting them. The film
+            utilizes found-footage conventions that were mirrored in the later films of the series.
 
+            Originally developed as an independent feature and given film festival screenings in 2007, the film was shot
+            for $15,000. It was then acquired by Paramount Pictures and modified, particularly with a new ending that
+            cost an additional total of $200,000. It was given a limited U.S. release on September 25, 2009, and then a
+            nationwide release on October 16, 2009. The film earned nearly $108 million at the U.S. box office and a
+            further $85 million internationally for a worldwide total of $193 million. Paramount/DreamWorks acquired
+            the U.S. rights for $350,000. It is the most profitable film ever made, based on return on
+            investment, although such figures are difficult to verify independently as this is likely to
+            exclude marketing costs. <a href="https://en.wikipedia.org/wiki/Paranormal_Activity">For more info click here.</strong></a>
+
+        </p>
+        <br>
+        <br>
     </main>
 
 
-
-
+    <!--The end of the body code-->
 
 </body>
-<footer> Enjoy the movie. If you want to share details about the movie contact me through <a href ="abraham.sauz7@gmail.com" > My email.</a> </footer>
+
+<!--So what I did to fix the problem was to put the footer after the end of the code body and as you can se the footer has a <p> code inside which I didn't put at the beggining. If you put the text as paragraph that should work and one more thing that I add was to use <br> to move the footer more down but I use does before my </main> or </body> ending. I hope that works for you-->
+    
+
+<footer class="foot">
+    <p>Enjoy the movie. If you want to share details about the movie contact me through </p><a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> My email.</a>
+</footer>
+
+
+
 
 </html>
